--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header>
+      <header class="page-header">
+  <div class="container">
+    Контакты в шапке
+  </div>
       <h1>Сайт начинающего верстальщика-таранчика</h1>
-    </header>
-    <main>
+      </header>
+      <main>
       <nav>
         Навигация
       </nav>
