--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
       <header class="page-header">
   <div class="container">
-    <p>Контакты в шапке</p>
+    <p>Taranets10@mail.ru +7911 955 00 00</p>
   </div>
       <h1>Сайт начинающего верстальщика-таранчика</h1>
       </header>
