--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div class="container">
     <p>Taranets10@mail.ru +7911 955 00 00</p>
   </div>
-      <h1>Сайт начинающего верстальщика-таранчика</h1>
-      </header>
+    <div class="container">  <h1>Сайт начинающего верстальщика-таранчика</h1>
+    </div>  </header>
       <main>
       <nav>
         Навигация
