--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </div>
     <div class="container">  <h1>Сайт начинающего верстальщика-таранчика</h1>
     </div>  </header>
+      <div class="container">
       <main>
       <nav>
         Навигация
@@ -25,9 +26,9 @@
       <section>
         Раздел про навыки
       </section>
-    </main>
+    </main>  </div>
     <footer>
-      Подвал сайта
+      <div class="container">  Подвал сайта </div>
     </footer>
   </body>
 </html>
