--- a/index.html
+++ b/index.html
@@ -8,14 +8,55 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
   </head>
+
   <body>
       <header class="page-header">
   <div class="container">
-    <p>Taranets10@mail.ru +7911 955 00 00</p>
+    <a class="header-email" href="mailto:taranets01@mail.ru">taranets01@mail.ru</a>
+     <a class="header-phone" href="tel:+7 111 999 22 22">+7 111 999 22 22</a> </div>
+</header>
+
+     <selection class="hero-image">
+    <div class="container">
+       <h1>Сайт начинающего верстальщика-таранчика</h1>
+       <p> Верстак верстак </p>
+          </div>
+  </selrcton>
+
+  <selection class="intro">
+ <div class="container">
+    <h2>Давайте познакомимся</h2>
+     <figure class=user-image>
+<img src="files/user.jpg" width="700" height="400" alt="Фотография Неопознанного Енота">
+</figure>
+ <div>
+   <h3> Пара слов о себе</h3>
+   <p> Здесь будет краткая биография</p>
+ </div>
+ <div>
+    <h3> Чем могу быть полезен</h3>
+    <p> Здесь будет описание моих преимуществ </p>
+    <div class="skills"> <h3> Мои навыки</h3>
+      <dl class="skills-list">
+        <dt class="skill-html">HTML</dt>
+     <dd class="level"><div style="width: 60%;">60%</div></dd>
+     <dt class="skill-css">CSS</dt>
+     <dd class="level"><div style="width: 40%;">40%</div></dd>
+  </dl>
+    </div>
   </div>
-    <div class="container">  <h1>Сайт начинающего верстальщика-таранчика</h1>
-    </div>  </header>
+</selrcton>
+<selection>
+  <div class="container">
+  <p style='font-size:90px ; font-weight:90; font-family: Geneva, Arial, Helvetica, sans-serif;'> Мои работы </p>
       <div class="container">
+        <figure class="project-image">
+  <img src="files/project.jpg" width="800" height="450" alt="Cайт инструктора Кекса">
+  <p>Сайт инструктора Кекса</p>
+</figure>
+
+        <a class="button" href="source/project/index.html">Открыть страницу</a>
+        </section>
       <main>
       <nav>
         Навигация
@@ -28,8 +69,11 @@
         Раздел про навыки
       </section>
     </main>  </div>
-    <footer>
-      <div class="container">  Подвал сайта </div>
+    <footer class="page-footer">
+        <div class="container">
+        <a class="footer-email" href="mailto:taranets01@mail.ru">taranets01@mail.ru</a>
+         <a class="footer-phone" href="tel:+7 111 999 22 22">+7 111 999 22 22</a>
+        </div>
     </footer>
   </body>
 </html>
